--- a/frontend/multaLista.html
+++ b/frontend/multaLista.html
@@ -109,9 +109,10 @@
                     <thead class="table-light justify-content-center">
                         <tr>
                             <th scope="col" class="px-5">Código multa</th>
+                            <th scope="col" class="px-5">Fecha de la multa</th>
+                            <th scope="col" class="px-5">Valor multa</th>
                             <th scope="col" class="px-5">Usuario multado</th>
                             <th scope="col" class="px-5">Prestamo</th>
-                            <th scope="col" class="px-5">Valor multa</th>
                             <th scope="col" class="px-5">Estado multa</th>
                             <th scope="col" class="px-5">Editar</th>
                     </tr>
