--- a/frontend/multaRegistro.html
+++ b/frontend/multaRegistro.html
@@ -110,13 +110,14 @@
                     </select>
                 </div>
                 <div class="col-md-4" style="margin-left: 0;">
-                    <label for="prestamo" class="form-label">Prestamo*</label>
+                    <label for="prestamo" class="form-label">Estado del prestamo*</label>
                     <select name="prestamo" id="prestamo" class="form-select">
                         <option selected disabled value="">
-                            Seleccione el tipo de prestamo
-                        </option>
-                        <option value=""></option>
-                        <option value=""></option>
+                            ¿En qué estado se encuentra?...
+                          </option> 
+                          <option value="prestamo">Préstamo</option>
+                          <option value="entregado">Entregado</option>
+                          <option value="cancelado">Cancelado</option>
                     </select>
                     </div>
                     <div class="col-md-4" style="margin-left: 0;">
