--- a/frontend/prestamoRegistro.html
+++ b/frontend/prestamoRegistro.html
@@ -158,8 +158,7 @@
         <button
         class="btn btn-success"
         onclick="registrarPrestamo();"
-        type="button" style="width: 200px;"
-        >
+        type="button" style="width: 200px;">
         Registrar
       </button>
       <button
