--- a/frontend/multaRegistro.html
+++ b/frontend/multaRegistro.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="col-12" style=" display: flex;justify-content: center;padding-bottom: 3%; gap: 20px;">
                         <!-- <div class="col-12" style=" display: flex;justify-content: center;"> -->
-                            <button class="btn btn-warining" type="button" onclick="registrarUsuario();" style="width: 200px;">Registrar</button>
+                            <button class="btn btn-warining" type="button" onclick="registrarmulta();" style="width: 200px;">Registrar</button>
                             <button class="btn btn-dark" type="button" onclick="limpiar();" style="width: 200px;">Limpiar</button>
                         </div>
                     </div>
