--- a/frontend/usuarioLista.html
+++ b/frontend/usuarioLista.html
@@ -136,20 +136,20 @@
                     </div>
                     <div class="col-6">
                         <label for="nombres" class="form-label">Nombres completos*</label>
-                        <input type="text" class="form-control" name="nombres" id="nombres" step="1" onfocusout="validarNombreusuario(this);" >
+                        <input type="text" class="form-control" name="nombres" id="nombres" step="1"  onfocusout="validarnombres(this);" >
                         <input type="hidden" id="id" step="1">
                     </div>
                     <div class="col-6">
                         <label for="direccion" class="form-label">Dirección*</label>
-                        <input type="text" class="form-control" name="direccion" id="direccion" >
+                        <input type="text" class="form-control" name="direccion" id="direccion" onfocusout="validardireccion(this);">
                 </div>
                 <div class="col-6">
                     <label for="correo" class="form-label">Correo*</label>
-                    <input type="text" class="form-control" name="correo" id="correo"  >
+                    <input type="text" class="form-control" name="correo" id="correo" onfocusout="validarCorreo(this);" >
                 </div>
                 <div class="col-6">
                     <label for="tipoUsuario" class="form-label">Tipo de usuario*</label>
-                    <input type="text" class="form-control" name="tipoUsuario" id="tipoUsuario" >
+                    <input type="text" class="form-control" name="tipoUsuario" id="tipoUsuario"  onfocusout="validarUsuario(this);">
                 </div>
                                   
                   </div> 
