--- a/frontend/libroRegistro.html
+++ b/frontend/libroRegistro.html
@@ -109,31 +109,31 @@
                 
                 <div class="col-md-4" style="margin-left: 0;">
                     <label for="titulo" class="form-label">Título*</label>
-                    <input type="text" class="form-control" name="titulo" id="titulo" onfocusout="validarNombreApellido(this);">
+                    <input type="text" class="form-control" name="titulo" id="titulo" onfocusout="validarTitulo(this);">
                 </div>
                 
                 <div class="col-md-4" style="margin-left: 0;">
                     <label for="autor" class="form-label">Autor*</label>
-                    <input type="text" class="form-control"  name="autor" id="autor" >
+                    <input type="text" class="form-control"  name="autor" id="autor" onfocusout="validarAutor(this);">
                 </div>
 
                 <div class="col-md-4" style="margin-left: 0;">
                     <label for="isbn" class="form-label">ISBN*</label>
-                    <input type="number" class="form-control" name="isbn" id="isbn"   onfocusout="validarNombreApellido(this);">
+                    <input type="number" class="form-control" name="isbn" id="isbn"   onfocusout="validarIsbn(this);">
                 </div>
 
                 <div class="col-md-4" style="margin-left: 0;">
                     <label for="genero" class="form-label">Género*</label>
-                    <input type="text" class="form-control" name="genero" id="genero"   onfocusout="validarNombreApellido(this);">
+                    <input type="text" class="form-control" name="genero" id="genero"   onfocusout="validarGenero(this);">
                 </div>
 
                 <div class="col-md-4" style="margin-left: 0;">
                     <label for="numero_disponible" class="form-label">Número de ejemplares disponibles*</label>
-                    <input type="number" class="form-control" name="numero_disponible" id="numero_disponible" >
+                    <input type="number" class="form-control" name="numero_disponible" id="numero_disponible" onfocusout="validarDisponibles(this);" >
                 </div>
                 <div class="col-md-4" style="margin-left: 0;">
                     <label for="numero_ocupado" class="form-label">Número de ejemplares ocupados*</label>
-                    <input type="number" class="form-control" name="numero_ocupado" id="numero_ocupado" >
+                    <input type="number" class="form-control" name="numero_ocupado" id="numero_ocupado" onfocusout="validarOcupados(this);" >
                 </div>
                 <div class="col-12" style=" display: flex;justify-content: center;padding-bottom: 3%; gap: 20px;">
                     <button class="btn btn-warning" type="button" onclick="RegistrarLibros();" style="width: 200px;">Registrar</button>
