--- a/frontend/multaRegistro.html
+++ b/frontend/multaRegistro.html
@@ -126,7 +126,7 @@
                     </div>
                     
                     
-                    <div class="col-md-4" style="margin-left: 0;">
+                    <div class="col-md-8" style="margin-left: 0;">
                         <label for="estado_multa" class="form-label">Estado de la multa*</label>
                         <select name="estado_multa" id="estado_multa" class="form-select">
                             <option selected disabled value="">
@@ -138,7 +138,7 @@
                     </div>
                     <div class="col-12" style=" display: flex;justify-content: center;padding-bottom: 3%; gap: 20px;">
                         <!-- <div class="col-12" style=" display: flex;justify-content: center;"> -->
-                            <button class="btn btn-warining" type="button" onclick="registrarmulta();" style="width: 200px;">Registrar</button>
+                            <button class="btn btn-warning" type="button" onclick="registrarmulta();" style="width: 200px;">Registrar</button>
                             <button class="btn btn-dark" type="button" onclick="limpiar();" style="width: 200px;">Limpiar</button>
                         </div>
                     </div>
