--- a/frontend/prestamoRegistro.html
+++ b/frontend/prestamoRegistro.html
@@ -99,76 +99,68 @@
       </div>
   </div>
     <!-- Navbar End -->
-    <h2 class="registrarPacienteT">Registrar prestamo</h2>
-    <!-- from Star(fromulario inicio) -->
-    <div class="" style="padding-left: 21rem;">
-      <p><strong>Todos los campos que contengan (*) son obligatorios</strong> </p>
-    </div><!-- <form class="row g-3 needs-validation" novalidate> -->
-      <div class="row"  style="place-content: center; gap: 20px;">
+    <div class="container" style="background-color: rgba(255, 255, 255, 0.5); border-radius: 10px; ">
+      <h2 class="registrarPacienteT">Registrar prestamo</h2>
+      <!-- from Star(fromulario inicio) -->
+      <div class="d-flex justify-content-center">
+        <p><strong>Todos los campos que contengan (*) son obligatorios</strong> </p>
+      </div><!-- <form class="row g-3 needs-validation" novalidate> -->
+        <div class="row"  style="place-content: center; gap: 20px;">
+          <div class="col-md-4">
+            <label for="fecha_prestamo" class="form-label">Fecha del prestamo</label>
+            <input type="date" class="form-control" name="fecha_prestamo" id="fecha_prestamo" step="1"  onfocusout="validarFechaPrestamo(this);" />
+          </div>
+          <div class="col-md-4">
+            <label for="fecha_devolucion" class="form-label">Fecha de la devolución</label>
+            <input
+            type="date"
+            class="form-control"
+            name="fecha_devolucion"
+            id="fecha_devolucion"
+            step="1"
+            onfocusout="validarFechaPrestamo(this);" 
+            />
+            <!-- onfocusout="validarNumeroIdentificacion(this);"  -->
+          </div>
+          <div class="col-md-4">
+            <label for="usuario" class="form-label">Usuario</label>
+            <select name="usuario" id="usuario" class="form-select"  onfocusout="validarUsuarioPrestamo(this);" >
+              <option selected disabled value="">
+                Seleccione el usuario
+              </option>
+              <option value=""></option>
+              <option value=""></option>
+              <option value=""></option>
+            </select>
+          </div>
         <div class="col-md-4">
-          <label for="fecha_prestamo" class="form-label">Fecha del prestamo</label>
-          <input type="date" class="form-control" name="fecha_prestamo" id="fecha_prestamo" step="1"  onfocusout="validarFechaPrestamo(this);" />
-        </div>
-        <div class="col-md-4">
-          <label for="fecha_devolucion" class="form-label">Fecha de la devolución</label>
-          <input
-          type="date"
-          class="form-control"
-          name="fecha_devolucion"
-          id="fecha_devolucion"
-          step="1"
-          onfocusout="validarFechaPrestamo(this);" 
-          />
-          <!-- onfocusout="validarNumeroIdentificacion(this);"  -->
-        </div>
-        <div class="col-md-4">
-          <label for="usuario" class="form-label">Usuario</label>
-          <select name="usuario" id="usuario" class="form-select"  onfocusout="validarUsuarioPrestamo(this);" >
+          <label for="libro" class="form-label">Libro</label>
+          <select name="libro" id="libro" class="form-select" onfocusout="validarLibroPrestado(this);">
             <option selected disabled value="">
-              Seleccione el usuario
+              Seleccione el libro
             </option>
             <option value=""></option>
             <option value=""></option>
             <option value=""></option>
           </select>
         </div>
-      <div class="col-md-4">
-        <label for="libro" class="form-label">Libro</label>
-        <select name="libro" id="libro" class="form-select" onfocusout="validarLibroPrestado(this);">
-          <option selected disabled value="">
-            Seleccione el libro
-          </option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-        </select>
-      </div>
-      
-      <div class="col-md-4">
-        <label for="estado_prestamo" class="form-label">Estado*</label>
-        <select name="estado_prestamo" id="estado_prestamo" class="form-select"onfocusout="validarEstadoPrestamo(this);">
-          <option selected disabled value="">
-            ¿En qué estado se encuentra?...
-          </option> 
-          <option value="prestamo">Préstamo</option>
-          <option value="entregado">Entregado</option>
-          <option value="cancelado">Cancelado</option>
-        </select>
-      </div>
-      <div class="col-12" style=" display: flex;justify-content: center;">
-        <button
-        class="btn btn-success"
-        onclick="registrarPrestamo();"
-        type="button" style="width: 200px;">
-        Registrar
-      </button>
-      <button
-      class="btn btn-dark"
-      onclick="limpiar();"
-      type="button" style="width: 200px;"
-      >
-      Limpiar
-    </button>
+        
+        <div class="col-md-8">
+          <label for="estado_prestamo" class="form-label">Estado*</label>
+          <select name="estado_prestamo" id="estado_prestamo" class="form-select"onfocusout="validarEstadoPrestamo(this);">
+            <option selected disabled value="">
+              ¿En qué estado se encuentra?...
+            </option> 
+            <option value="prestamo">Préstamo</option>
+            <option value="entregado">Entregado</option>
+            <option value="cancelado">Cancelado</option>
+          </select>
+        </div>
+        <div class="col-12" style=" display: flex;justify-content: center;padding-bottom: 3%; gap: 20px;">
+        <!-- <div class="col-12" style=" display: flex;justify-content: center;"> -->
+        <button class="btn btn-warning" onclick="registrarPrestamo();" type="button" style="width: 200px;">Registrar</button>
+        <button class="btn btn-dark" onclick="limpiar();" type="button" style="width: 200px;">Limpiar</button>
+    </div>
   </div>
 </div>
 <!-- </form> -->
