--- a/frontend/multaLista.html
+++ b/frontend/multaLista.html
@@ -130,9 +130,9 @@
                         <h5 class="modal-title" id="exampleModalLabel">Modificar multa</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body" >
+                    <div class="modal-body" onload="CargarFormulario();">
                         <div class="row" >
-                            <div class="col-6">
+                            <div class="">
                                 <p><strong>Todos los campos que contengan (*) son obligatorios</strong> </p>
                             </div>
                             <div class="col-6">
